[tool.poetry]
name = "kgrag"
version = "0.1.0"
description = ""
authors = ["Ahmad-Wali-i170106 <wali26.pakistan@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "^0.2.11"
langchain-openai = "^0.1.20"
langchain-google-genai = "^1.0.8"
langchain-community = "^0.2.10"
langchain-experimental = "^0.0.63"
google-cloud-documentai = "^2.30.0"
google-cloud-documentai-toolbox = "^0.14.0a0"
pypdf2 = "^3.0.1"
pytesseract = "^0.3.10"
pdf2image = "^1.17.0"
json-repair = "^0.26.0"
python-dotenv = "^1.0.1"
pycryptodome = "^3.20.0"
pymupdf = "^1.24.9"
rapidocr-onnxruntime = "^1.3.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
